Fixes layout issues on lyrics screen

--- a/src/app/ui/components/now-playing/now-playing-lyrics/now-playing-lyrics.component.scss
+++ b/src/app/ui/components/now-playing/now-playing-lyrics/now-playing-lyrics.component.scss
@@ -6,14 +6,20 @@
 }
 
 .app-now-playing-lyrics__picture {
-    margin-right: 50px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
+    box-shadow:
+        0 4px 8px 0 rgba(0, 0, 0, 0.2),
+        0 6px 20px 0 rgba(0, 0, 0, 0.2);
 }
 
 .app-now-playing-lyrics__text {
+    margin-left: 50px;
     flex: 1;
     overflow-y: auto;
     overflow-x: hidden;
+}
+
+.app-now-playing-lyrics__playback-info {
+    width: 300px;
 }
 
 .app-now-playing-lyrics__icon {
